--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "webpack --mode production",
+    "build": "webpack",
     "dev": "webpack --mode development --watch"
   },
   "keywords": [],
