--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-cli": "^5.1.1"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
